# prova-Qt

./: README.md
Test cmake/: CMakeLists.txt  Somma.cpp  Somma.h  Somma2.cpp  Somma2.h  Test.pro  XMLReader.cpp  XMLReader.h  bintree.xml  main.cpp  resource.h  resource.rc
Test cmake/resources/: english.ts  italiano.ts  res.qrc
Test cmake/ui/: interface.ui  somma.ui  somma2.ui
